tests/baselines/reference/ES5For-of31.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of31.ts(3,8): error TS2459: Type 'undefined' has no property 'a' and no string index signature.
tests/cases/conformance/statements/for-ofStatements/ES5For-of31.ts(3,18): error TS2459: Type 'undefined' has no property 'b' and no string index signature.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of31.ts (2 errors) ====
    var a: string, b: number;
    
    for ({ a: b = 1, b: a = ""} of []) {
           ~
!!! error TS2459: Type 'undefined' has no property 'a' and no string index signature.
                     ~
!!! error TS2459: Type 'undefined' has no property 'b' and no string index signature.
        a;
        b;
    }